# swan

./: Cargo.toml  README.md  TODO.md
common/src/: lib.rs
core/src/: lib.rs
subcommands/about/: Cargo.toml
subcommands/about/src/: lib.rs
subcommands/creds/: Cargo.toml
subcommands/swan-about/: Cargo.toml
subcommands/swan-about/src/: lib.rs
subcommands/swan-creds/: Cargo.toml
subcommands/swan-gm/: Cargo.toml
subcommands/swan-gm/src/: lib.rs
subcommands/swan-help/: Cargo.toml
subcommands/swan-help/src/: commands.rs  lib.rs
swan/: Cargo.toml
swan-common/: Cargo.toml
swan-common/src/: lib.rs
swan/src/: lib.rs  main.rs
swan_about/: Cargo.toml
swan_about/src/: lib.rs
