[package]
name = "swan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swan-common = { path = "../swan-common" }
swan-about = { path = "../subcommands/swan-about" }
swan-help = { path = "../subcommands/swan-help"}
swan-gm = { path = "../subcommands/swan-gm"}
indicatif = "0.17.3"
console = "0.15.5"
